@@ -5,26 +5,37 @@ import sys
 import imp
 import gettext
 
+from tryton.config import get_config_dir
+
+__all__ = ['MODULES', 'register']
+
 _ = gettext.gettext
 
-PLUGINS_PATH = os.path.dirname(__file__)
-if not os.path.isdir(PLUGINS_PATH):
-    # try for py2exe
-    PLUGINS_PATH = os.path.join(os.path.abspath(os.path.normpath(
-        os.path.dirname(sys.argv[0]))), 'plugins')
 MODULES = []
 
 
 def register():
     global MODULES
-    if os.path.isdir(PLUGINS_PATH):
-        for plugin in os.listdir(PLUGINS_PATH):
-            if not os.path.isdir(os.path.join(PLUGINS_PATH, plugin)):
-                continue
+    paths = [
+        os.path.join(get_config_dir(), 'plugins'),
+        os.path.dirname(__file__),
+        #py2exe
+        os.path.join(os.path.abspath(os.path.normpath(
+                    os.path.dirname(sys.argv[0]))), 'plugins'),
+        ]
+    paths = filter(os.path.isdir, paths)
+
+    imported = set()
+    for path in paths:
+        for plugin in os.listdir(path):
             module = os.path.splitext(plugin)[0]
+            if module == '__init__' or module in imported:
+                continue
             try:
                 module = imp.load_module(module, *imp.find_module(module,
-                        [PLUGINS_PATH]))
+                        [path]))
                 MODULES.append(module)
             except ImportError:
                 continue
+            else:
+                imported.add(module.__name__)
